@@ -23,3 +23,5 @@ TARGET_LINK_LIBRARIES(fluid fltk fltk_images fltk_forms ${FLTK_PLATFORM_DEPENDEN
 IF(OPENGL_FOUND)
 	TARGET_LINK_LIBRARIES(fluid fltk_gl)
 ENDIF(OPENGL_FOUND)
+
+INSTALL_TARGETS(/bin fluid)
