@@ -161,11 +161,11 @@ SET(CFILES
   vsnprintf.c
   )
 
-# We need ansi c-flags, especially on HP
-SET(CMAKE_C_FLAGS "${CMAKE_ANSI_CFLAGS} ${CMAKE_C_FLAGS}")
-SET(CMAKE_REQUIRED_FLAGS ${CMAKE_ANSI_CFLAGS})
-
 ADD_LIBRARY(fltk ${CPPFILES} ${CFILES})
+SET_TARGET_PROPERTIES(fltk
+  PROPERTIES
+  VERSION ${FLTK_VERSION_MAJOR}.${FLTK_VERSION_MINOR}
+  SOVERSION ${FLTK_VERSION_PATCH})
 
 TARGET_LINK_LIBRARIES(fltk ${FLTK_PLATFORM_DEPENDENT_LIBS} ${CMAKE_THREAD_LIBS_INIT})
 
@@ -176,13 +176,25 @@ ENDIF(X11_FOUND)
 IF(OPENGL_FOUND)
   ADD_LIBRARY(fltk_gl ${GLCPPFILES})
   TARGET_LINK_LIBRARIES(fltk_gl fltk ${OPENGL_LIBRARIES})
+  SET_TARGET_PROPERTIES(fltk_gl
+    PROPERTIES
+    VERSION ${FLTK_VERSION_MAJOR}.${FLTK_VERSION_MINOR}
+    SOVERSION ${FLTK_VERSION_PATCH})
 ENDIF(OPENGL_FOUND)
 
 ADD_LIBRARY(fltk_forms ${FLCPPFILES})
 TARGET_LINK_LIBRARIES(fltk_forms fltk)
+SET_TARGET_PROPERTIES(fltk_forms
+  PROPERTIES
+  VERSION ${FLTK_VERSION_MAJOR}.${FLTK_VERSION_MINOR}
+  SOVERSION ${FLTK_VERSION_PATCH})
 
 ADD_LIBRARY(fltk_images ${IMGCPPFILES})
 TARGET_LINK_LIBRARIES(fltk_images fltk)
+SET_TARGET_PROPERTIES(fltk_images
+  PROPERTIES
+  VERSION ${FLTK_VERSION_MAJOR}.${FLTK_VERSION_MINOR}
+  SOVERSION ${FLTK_VERSION_PATCH})
 
 IF(HAVE_LIBPNG)
   TARGET_LINK_LIBRARIES(fltk_images ${PNG_LIBRARIES})
@@ -191,3 +203,8 @@ ENDIF(HAVE_LIBPNG)
 IF(HAVE_LIBJPEG)
   TARGET_LINK_LIBRARIES(fltk_images ${JPEG_LIBRARIES})
 ENDIF(HAVE_LIBJPEG) 
+
+INSTALL_TARGETS(/lib fltk)
+INSTALL_TARGETS(/lib fltk_gl)
+INSTALL_TARGETS(/lib fltk_forms)
+INSTALL_TARGETS(/lib fltk_images)
