@@ -1,6 +1,7 @@
 CHANGES IN FLTK 1.1.7
 
 	- Documentation fixes (STR #648, STR #692)
+	- Updated cmake support (STR #645)
 	- Fl_Check_Browser didn't draw properly when inactive
 	  (STR #681)
 	- Removed some redundant code in Fl_Group::handle() (STR
